# HighLoad_Server

Server/Server/: CMakeLists.txt  ClientsQueue.cpp  ClientsQueue.h  Decoder.cpp  Decoder.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Request.cpp  Request.h  Response.cpp  Response.h  Server.cpp  Server.h  UrlParser.cpp  UrlParser.h  Worker.cpp  Worker.h  main.cpp
Server/Server.xcodeproj/: project.pbxproj
Server/Server.xcodeproj/project.xcworkspace/xcshareddata/: Server.xccheckout
Server/Server.xcodeproj/project.xcworkspace/xcuserdata/artur.xcuserdatad/: UserInterfaceState.xcuserstate
Server/Server.xcodeproj/xcuserdata/artur.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Server/Server.xcodeproj/xcuserdata/artur.xcuserdatad/xcschemes/: Server.xcscheme  xcschememanagement.plist
